Sort the "Frequently Played" view based on the play count of each track

Previously was using a formula that prioritised recently played tracks.
This meant you could have a track with 8 plays being displayed higher
than a track with 10 plays.

Now the view only sorts tracked based on the play count of each track.

BUG: 459985